0.5 showTranscript feature